Fa24 Updates -- Added new lessons! (#99)
* archived old lessons, added new ones

* archived old lessons, added new ones

* added more lessons (+ final lessons)

--- a/lessons.html
+++ b/lessons.html
@@ -49,9 +49,91 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "title": "The Brightest Bulbs on the Christmas BEAM",
           "description": "Learn about electricity and its many uses.",
           "category": "physics"
+        },
+        {
+          "name": "debugging_loop",
+          "title": "Stuck in a Debugging Loop",
+          "description": "Explore the basics of how we communicate to computers and write programs that are executed by computers.",
+          "category": "misc"
+        },
+        {
+          "name": "defeat_the_lambdanean_hydra",
+          "title": "Defeat the Lambdanean Hydra",
+          "description": "An introduction to the science behind hydraulic machines and how liquids can be used to generate and transmit power.",
+          "category": "physics"
+        },
+        {
+          "name": "disease",
+          "title": "Disease? Let's B. cereus...",
+          "description": "Explore the field of epidemiology and apply it to current trends of disease.",
+          "category": "biology"
+        },
+        {
+          "name": "float_like_a_cadillac",
+          "title": "Float like a Cadillac, sting like a BEAMer",
+          "description": "Explore real-world engineering concepts related to automobiles, including new innovations in the car industry.",
+          "category": "physics"
+        },
+        {
+          "name": "going_with_the_flow",
+          "title": "Going With The Flow",
+          "description": "Learn about Bernoulli's principle and its application on planes and boats!",
+          "category": "physics"
+        },
+        {
+          "name": "let_the_show_begin",
+          "title": "Let the Show Begin!",
+          "description": "Explore the world of optical illusions, create your own animations by making flipbooks, and build your own movie projector.",
+          "category": "misc"
+        },
+        {
+          "name": "missing",
+          "title": "Missing!",
+          "description": "Dive into the techniques used by police and forensic detectives when approaching crime scenes.",
+          "category": "misc"
+        },
+        {
+          "name": "my_soil_mate",
+          "title": "You're my Soil-mate",
+          "description": "Learn about the different types of soil, their connections to agriculture, food systems, and soil processes.",
+          "category": "biology"
+        },
+        {
+          "name": "the_martian",
+          "title": "The Martian",
+          "description": "Discover the processes required to form a settlement on Mars.",
+          "category": "misc"
+        },
+        {
+          "name": "you_are_toxic",
+          "title": "Don't You Know That You're Toxic?",
+          "description": "An introduction to the field of toxicology!",
+          "category": "chemistry"
+        },
+        {
+          "name": "bees",
+          "title": "Honey, I Shrunk the Mentees!",
+          "description": "A lesson all about bees! From pollination, to communication, to the anatomy of bees.",
+          "category": "biology"
+        },
+        {
+          "name": "premed",
+          "title": "An 🍎 a Day Keeps the Premeds Away",
+          "description": "An opportunity to see what doctors study and do on a daily basis.",
+          "category": "biology"
+        },
+        {
+          "name": "enzyme",
+          "title": "Will You Be My Val-enzyme?",
+          "description": "Learn about how enzymes carry out essential functions in the human body.",
+          "category": "biology"
+        },
+        {
+          "name": "skin",
+          "title": "Not Too S-keen!",
+          "description": "Explore the field of dermatology and the importance of sunblock for the skin.",
+          "category": "misc"
         }
-
-        
       ];
 
       // Sorts lessons in alphabetical order by title
@@ -145,12 +227,17 @@ document.getElementById("start").click();
 
 
       var lessons = [
-        ["going_viral", "BEAM's Going Viral!", "Harding A (Spring 2021)", "Take a sneak peek into the world of epidemiology and learn how diseases spread."],
+        ["cryptology", "I Spy a Cryptologist", "Stewart (Fall 2022)", "Explore the field of cryptology and the ways ciphers are used to communicate securely."],
+        ["heart", "Don't Play Heart to Get", "Harding (Spring 2023)", "Learn about the importance of the heart and its functionalities!"],
+        ["fungi", "It's Time For FUNgi", "Maynard (Spring 2023)", "Dive into the world of fungi and their role in our ecosystem."],
+        ["okay_bloomer", "Okay, Bloomer", "Crocker Highlands (Spring 2023)", "Learn the importance of capillary action and explore the anatomy of flowers through 3D models."],
+        ["chromatography", "Crazy About Chromatography", "Harding (Fall 2022)", "An introduction to the science of chromatography: the separation of compounds in a mixture by their polarity."],
         ["take_a_chance", "Take a Chance!", "Harding A (Fall 2021)", "A fun introduction to statistics and probability, and its application to everyday life."],
         ["quit_overreacting", "Quit Overreacting!!", "Maynard A (Fall 2021)", "Learn about the differences between physical and chemical reactions!"],
         ["how_to_make_people_pill_better", "How to Make People Pill Better", "Thousand Oaks A (Fall 2019)", "Explore the conditions that influence and affect the design and development of medicine"],
-        ["chem_1a", "Chem 1A", "Harding A (Spring 2022)", "Dive into the exciting world of chemistry and learn about molecular properties."],
         ["oil_i_need", "You're Oil I Need", "Ruth Acty A (Spring 2022)", "Learn about the fundamental concepts of crude oil and how to clean on oil spill."]
+        // ["going_viral", "BEAM's Going Viral!", "Harding A (Spring 2021)", "Take a sneak peek into the world of epidemiology and learn how diseases spread."],
+        // ["chem_1a", "Chem 1A", "Harding A (Spring 2022)", "Dive into the exciting world of chemistry and learn about molecular properties."],
         //["shake_it_up", "Shake It Up!", "Longfellow B: Learn about the engineering behind earthquake damage prevention."]
       ];
 
