--- a/lessons.html
+++ b/lessons.html
@@ -24,7 +24,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "airplanes",
           "title": "Can We Pretend That Airplanes",
           "description": "Learn what makes airplanes fly!",
-          "category": "physics"
+          "category": "current"
         },
         {
           "name": "BEAM_away_the_shadows",
@@ -42,7 +42,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "break_a_leg",
           "title": "Break A Leg!",
           "description": "Learn about the structure and function of bones, how they heal when broken, and how they work to produce movement.",
-          "category": "biology"
+          "category": "current"
         },
         {
           "name": "christmas_BEAM",
@@ -54,19 +54,19 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "debugging_loop",
           "title": "Stuck in a Debugging Loop",
           "description": "Explore the basics of how we communicate to computers and write programs that are executed by computers.",
-          "category": "misc"
+          "category": "current"
         },
         {
           "name": "defeat_the_lambdanean_hydra",
           "title": "Defeat the Lambdanean Hydra",
           "description": "An introduction to the science behind hydraulic machines and how liquids can be used to generate and transmit power.",
-          "category": "physics"
+          "category": "current"
         },
         {
           "name": "disease",
           "title": "Disease? Let's B. cereus...",
           "description": "Explore the field of epidemiology and apply it to current trends of disease.",
-          "category": "biology"
+          "category": "current"
         },
         {
           "name": "float_like_a_cadillac",
@@ -126,7 +126,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "enzyme",
           "title": "Will You Be My Val-enzyme?",
           "description": "Learn about how enzymes carry out essential functions in the human body.",
-          "category": "biology"
+          "category": "chemistry"
         },
         {
           "name": "skin",
