Added new staff

--- a/about.html
+++ b/about.html
@@ -294,21 +294,29 @@ description:
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
             var data = [
-                ['Adithya Sagar', '2025', 'Head of Outreach', 'white'],
-                ['Apollo Loh', 'EECS & Philosophy 2026', 'Head of Logistics', 'apollo'],
+                ['Adithya Sagar', 'CS 2025', 'Head of Outreach', 'AdithyaS'],
+                ['Alice Peng','MCB 2025', 'Curriculum | Site Leading','Alice'],
+                ['Annika Nam','Public Health + MCB 2026', 'Site Leading | Mentor Development','Annika'],
+                ['Apollo Loh', 'EECS + Philosophy 2026', 'Head of Logistics', 'apollo'],
                 ['Ashley Kaya', 'Microbial Biology 2025', 'Exec Head of External Affairs', 'ashley'],
                 ['Bradley Louie', '2026', 'Logistics | Mentor Development', 'white'],
+                ['Brandon Su', 'Applied Math + CS 2026', 'External Affairs | Mentor Development', 'Brandon'],
                 ['Carina Kim', 'Architecture + Linguistics 2025', 'President', 'carina'],
                 ['Cassandra Davis', '2025', 'Head of Mentor Development', 'cassie'],
                 ['Destiny Ogu', 'MCB + Data Science 2025', 'Site Leading | Logistics', 'destiny'],
                 ['Ekansh Agrawal', 'MCB 2025', 'Head of Mentor Development', 'ekansh'],
                 ['Ella Kasamis', 'BioE 2026', 'Logistics | Site Leading', 'ella'],
+                ['Emily Tu', 'DS + Public Health 2025', 'External Affairs | Outreach', 'Emily'],
                 ['Emily Yepez', '2025', 'President', 'emilyyy'],
+                ['Evelyn Batchelor', 'MCB + Public Health 2025', 'Site Leading | Outreach', 'Evelyn'],
                 ['Grace Xie', 'MCB + Data Science 2026', 'Head of Curriculum', 'grace'],
                 ['Hannah Cho', 'Legal Studies 2025', 'External Affairs | Site Leading', 'hannah'],
+                ['James Ghirardo', 'MechE 2026', 'Site Leading | Mentor Development', 'James'],
+                ['Kaitlyn Park', 'DS 2025', 'External Affairs | Outreach', 'KaitlynP'],
                 ['Kayla Lowenberg', 'MechE 2026', 'Site Leading | Logistics', 'kayla'],
+                ['Lucas Parker', 'IB 2027', 'Logistics | Outreach', 'Lucas'],
                 ['Makenna Leung', 'Anthropology 2025', 'Head of Site Leading', 'makenna'],
-                ['Marine Lyden', 'MCB + Public Policy 2025', 'Head of Site Leading', 'marine'],
+                ['Marine Lyden', 'MCB 2025', 'Head of Site Leading', 'Marine'],
                 ['Meisen Wang', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'meisen'],
                 ['Michelle Jeong', 'Material Science Engineering 2026', 'Site Leading | Outreach', 'michelle'],
                 ['Mira Chatrathi', 'Data Science 2026', 'Site Leading | Mentor Development', 'mira'],
@@ -317,6 +325,8 @@ description:
                 ['Rebecca Bernstein', '2025', 'Curriculum | Site Leading', 'rebecca'],
                 ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'safaa'],
                 ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'Curriculum | Site Leading', 'shlok'],
+                ['Shu-Han Lim', 'CivilEng 2027', 'Site Leading | Outreach', 'Shuhan'],
+                ['Valeria Pasillas', 'Political Science 2026', 'External Affairs | Mentor Development', 'Valeria'],
                 ['Zachary Liu', 'MechE 2025', 'External Affairs | Logistics', 'zachary']
             ];
             //Categories to sort by. In this case, sort by year.
