trobleshooting/renamed img

--- a/about.html
+++ b/about.html
@@ -294,7 +294,7 @@ description:
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
             var data = [
-                ['Adithya Sagar', 'CS 2025', 'Head of Outreach', 'AdithyaS'],
+                ['Adithya Sagar', 'CS 2025', 'Head of Outreach', 'adithyas'],
                 ['Alice Peng','MCB 2025', 'Curriculum | Site Leading','Alice'],
                 ['Annika Nam','Public Health + MCB 2026', 'Site Leading | Mentor Development','Annika'],
                 ['Apollo Loh', 'EECS + Philosophy 2026', 'Head of Logistics', 'apollo'],
