Updated donate info

--- a/donate.html
+++ b/donate.html
@@ -34,7 +34,7 @@ description:
 
 
 
-        <button style="padding: 2%; width: 35%;" onclick="window.open('https://givingday.berkeley.edu/giving-day/92014/donate?dept=94211', '_blank')" class="custom-button"><span style="font-size: 0.8em; font-weight: bold;">Donate Now</span></button>
+        <button style="padding: 2%; width: 35%;" onclick="window.open('http://crowdfund.berkeley.edu/beam25', '_blank')" class="custom-button"><span style="font-size: 0.8em; font-weight: bold;">Donate Now</span></button>
     </div>
 
 <!-- styling locatd in layout.scss -->
@@ -47,10 +47,10 @@ description:
         },
         data: {
             columns: [
-            ['Lesson Materials', 21.3],
-              ['Transportation to Site', 40.1],
-              ['Risk Management', 29.5],
-              ['Advertising + Recruitment', 9.1]
+            ['Lesson Materials', 17.2],
+              ['Transportation to Site', 45.1],
+              ['Risk Management', 28.0],
+              ['Advertising + Recruitment', 9.7]
             ],
             //5bba6f green
             //fd151b red
@@ -74,7 +74,7 @@ description:
             
         },
         donut: {
-            title: "BEAM 2023-2024 Budget"
+            title: "BEAM 2024-2025 Budget"
         }
     });
     </script>
