--- a/join.html
+++ b/join.html
@@ -11,38 +11,38 @@ description:
 
 <section style="margin-bottom: 100px; padding-top: 90px; display: flex; margin-left: 10%">
   <div class="content" style="width: 60%; padding-right: 8%;">
-    <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 Application will be released soon! <br>
-      Our application will be due on Friday, September 13th - 11:59 PM PST.
-    </h2> -->
+    <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 Application will be released soon! <br>
+      Our application will be due on Tuesday, February 4th - 11:59 PM PST.
+    </h2>
 
-    <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Fall 2024 <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLSfQCdPA_Z_icio_4uVyUbF40GjANKoSCk7pOaAuKZcPYfkDHw/viewform?pli=1">Application</a>
+    <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
-            Our application is due on Friday, September 13th - 11:59 PM PST.
-    </h2> -->
+            Our application is due on Friday, February 7th - 11:59 PM PST.
+    </h2>
     <!-- Next 4 lines are for AFTER Application season -->
   
-   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a> -->
+   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>
     <p><strong>Fall 2024 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
         href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Spring 2025 infosession/application.</p>
- 
+  -->
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
        
-          <!-- <p>
+          <p>
             Joining BEAM is the perfect way to share your love for science and engineering with the local community!
           </p>
 
           <p>
-  					For interested <strong>Fall 2024 mentors</strong>,
+  					For interested <strong>Spring 2025 mentors</strong>,
             stop by at our infosession for application information and advice!
           </p>
 
           <p>
   					<strong>BEAM Infosession</strong> <br>
-            Tuesday, September 10th 8:00-10:00 PM PST <br>
-            Anthropology Art Building 160<br>
-          </p> -->
+            Tuesday, February 4th 8:30-10:00 PM PST <br>
+            Latimer 120<br>
+          </p>
 
           <p> More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/">Facebook</a> and
