--- a/join.html
+++ b/join.html
@@ -10,14 +10,14 @@ description:
 
 
 <section style="margin-bottom: 100px; padding-top: 90px; display: flex; margin-left: 10%">
-  <div class="content" style="width: 60%; padding-right: 8%;">
+  <!-- <div class="content" style="width: 60%; padding-right: 8%;">
     <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 Application will be released soon! <br>
       Our application will be due on Tuesday, February 4th - 11:59 PM PST.
-    </h2>
+    </h2> -->
 
     <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
-            Our application is due on Friday, February 7th - 11:59 PM PST.
+            Our application is due on Friday, February 7th - 11:59 PM PST, and decisions will be released Sunday, February 9th.
     </h2>
     <!-- Next 4 lines are for AFTER Application season -->
   
