update application info

--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@ description:
                 filled with what you should focus on when writing your responses. Remember, 
                 the best opportunity you'll have to learn more about BEAM and our 
                 application will stil be at our infosession, so don't forget to join us at 
-                <strong>Anthropology Art Building 160 at 8:00 PM PST!</strong></i>
+                <strong>Latimer 120 on Tuesday, February 4 @ 8:30 PM PST!</strong></i>
             </p>
             
             <p style="text-align: left;"> <b>BEAM's Mission Statement is: To provide 
@@ -70,7 +70,7 @@ description:
 
             <p style="text-align: center; margin-top: 40px;">
                 <i>You did it! We hope that wasn't so bad. We're really excited to see the fantastic work you've put into your application,
-                and you should be proud for completing it! Decisions will be released on <strong>Sunday, September 15.</strong></i>
+                and you should be proud for completing it! Decisions will be released on <strong>Sunday, February 9.</strong></i>
             </p>
 
             <!-- <p style="text-align: left;"><b>How strict is the word count?</b></p>
