--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@ description:
     <!-- ### These three lines are for DURING application season ### -->
     <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
-            Our application is due on Friday, February 7th - 11:59 PM PST, and decisions will be released Sunday, February 9th.
+            Our application is due on Friday, February 7th - 11:59 PM PST.
     </h2>
 
     <!-- ### Next 4 lines are for AFTER Application season ### -->
