--- a/donate.html
+++ b/donate.html
@@ -84,7 +84,7 @@ description:
 <div id="mc_embed_shell">
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-      #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px; margin: auto}
+      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px; margin: auto}
       /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
          We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
@@ -144,9 +144,12 @@ description:
                 
                 // donor list, modify as needed
                 const donors1 = [
-                    { donorName: 'Sejal Rajurkar' },
-                    { donorName: 'Patrick Oare' },
-                    { donorName: 'Anne Diga Jacobsen' },
+                    { donorName: 'Julie Ming Liang' },
+                    { donorName: 'Perez Lowery Jr.' },
+                    { donorName: 'June Lowenberg' },
+                    { donorName: 'Jay Kim' },
+                    { donorName: 'Jared Puerta' },
+                    { donorName: 'Apollo Loh' },
                 ];
                 // in-place sorts the donors
                 donors1.sort(function(a, b) {
