updated donors + post-application season

--- a/join.html
+++ b/join.html
@@ -16,21 +16,21 @@ description:
     </h2> -->
 
     <!-- ### These three lines are for DURING application season ### -->
-    <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">Application</a>
+    <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
             Our application is due on Friday, February 7th - 11:59 PM PST.
-    </h2>
+    </h2> -->
 
     <!-- ### Next 4 lines are for AFTER Application season ### -->
-   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>
-    <p><strong>Fall 2024 applications are now closed</strong> but feel free to add
+   <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+    <p><strong>Spring 2025 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Spring 2025 infosession/application.</p>
-  -->
+        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2025 infosession/application.</p>
+ 
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
        
-          <p>
+          <!-- <p>
             Joining BEAM is the perfect way to share your love for science and engineering with the local community!
           </p>
 
@@ -49,7 +49,7 @@ description:
             href="https://www.facebook.com/beam.teach/">Facebook</a> and
             <a target=_blank href="https://www.instagram.com/beam_berkeley/?hl=en">Instagram</a>
             page. Follow us to stay updated!
-          </p>
+          </p> -->
   </div>
 
   <!--
