--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@ description: Berkeley Engineers and Mentors
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
 
-			<!-- <p class="body">Interested in being part of the BEAM team? Our Spring 2025 Application will be published after our
+			<p class="body">Interested in being part of the BEAM team? Our Fall 2025 Application will be published after our
 				<a target=_blank href="https://www.facebook.com/events/161068278857651">infosession</a>; infosession at the beginning of the semester.
-				In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a>, our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p> -->
+				In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a>, our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
 
-				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2025 Application can be found <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">here</a>,
-					and be sure to check out our <a href="join">join page</a> or <a target=_blank href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
+				<!-- <p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2025 Application can be found <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">here</a>,
+					and be sure to check out our <a href="join">join page</a> or <a target=_blank href="https://facebook.com/beam.teach">Facebook</a> for more information!</p> -->
 
 				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
