updated application and infosession

--- a/join.html
+++ b/join.html
@@ -11,9 +11,10 @@ description:
   <div class="content" style="width: 60%; padding-right: 8%;">
 
     <!-- ### These three lines are for BEFORE applications are released ### -->
-    <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 Application will be released soon! <br>
-      Our application will be due on Tuesday, February 4th - 11:59 PM PST.
-    </h2> -->
+    <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+    <p>
+      Fall 2025 applications will open <strong>Aug 27 to Sep 5th.</strong> Follow us on <a href="https://www.instagram.com/beam_berkeley/">Instagram</a> to receive information about our Fall 2025 infosession/application.
+    </p>
 
     <!-- ### These three lines are for DURING application season ### -->
     <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">Application</a>
@@ -22,10 +23,10 @@ description:
     </h2> -->
 
     <!-- ### Next 4 lines are for AFTER Application season ### -->
-   <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>
     <p><strong>Spring 2025 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2025 infosession/application.</p>
+        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2025 infosession/application.</p> -->
  
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
