--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@ description:
 
 		<br>
 
-		<p>You can also find us on <a href="https://www.facebook.com/beam.teach/">Facebook</a> and <a
+		<p>You can also find us on <a>
 				href="https://www.instagram.com/beam_berkeley/">Instagram</a>!</p>
 	</div>
 	<div id="form" style = "padding-left: 100px; margin-top: 0%;">
