--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ description: Berkeley Engineers and Mentors
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
 
-			<p class="body">Interested in being part of the BEAM team? Our Fall 2025 Application will be published after our
-				<a target=_blank href="https://www.facebook.com/events/161068278857651">infosession</a>; infosession at the beginning of the semester.
-				In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a>, our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
+			<p class="body">Interested in being part of the BEAM team? Our Fall 2025 Application opens August 27. You are also welcomed to our 
+				infosession September 4th in Latimer at 8pm with pizza provided. Stay updated by following us on <a href="https://www.instagram.com/beam_berkeley">Instagram.</a>
+				In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a> or our <a href="join">join page</a> for more information!</p>
 
 				<!-- <p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2025 Application can be found <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">here</a>,
 					and be sure to check out our <a href="join">join page</a> or <a target=_blank href="https://facebook.com/beam.teach">Facebook</a> for more information!</p> -->
