added application links

--- a/join.html
+++ b/join.html
@@ -13,7 +13,9 @@ description:
     <!-- ### These three lines are for BEFORE applications are released ### -->
     <a href="#app">We accept mentor applications at the beginning of each semester.</a>
     <p>
-      Fall 2025 applications will open <strong>Aug 27 to Sep 5th.</strong> Follow us on <a href="https://www.instagram.com/beam_berkeley/">Instagram</a> to receive information about our Fall 2025 infosession/application.
+      <a href=
+        "https://docs.google.com/forms/d/e/1FAIpQLSfhFHNBtm7uZ-WQJlB8uUUXYKX4moM26ne_mle7NGNS1J_vJg/viewform?usp=header"
+      >Fall 2025 applications</a> will open <strong>Aug 27 to Sep 5th.</strong> Follow us on <a href="https://www.instagram.com/beam_berkeley/">Instagram</a> to receive information about our Fall 2025 infosession/application.
     </p>
 
     <!-- ### These three lines are for DURING application season ### -->
