--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ description: Berkeley Engineers and Mentors
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
 
-				<p class="body">Interested in being part of the BEAM team? Our Fall 2025 Application opens August 27. You are also welcomed to our 
+				<p class="body">Interested in being part of the BEAM team? Our Fall 2025 Application opens August 27, 
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfhFHNBtm7uZ-WQJlB8uUUXYKX4moM26ne_mle7NGNS1J_vJg/viewform?usp=header">apply here</a>. You are also welcomed to our 
 					infosession September 4th in Latimer at 8pm with pizza provided. Stay updated by following us on <a href="https://www.instagram.com/beam_berkeley">Instagram</a>.
 					In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a> or our <a href="join">join page</a> for more information!</p>
 				
