updated application status

--- a/join.html
+++ b/join.html
@@ -11,12 +11,12 @@ description:
   <div class="content" style="width: 60%; padding-right: 8%;">
 
     <!-- ### These three lines are for BEFORE applications are released ### -->
-    <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+    <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>
     <p>
       <a href=
         "https://docs.google.com/forms/d/e/1FAIpQLSfhFHNBtm7uZ-WQJlB8uUUXYKX4moM26ne_mle7NGNS1J_vJg/viewform?usp=header"
       >Fall 2025 applications</a> will open <strong>Aug 27 to Sep 5th.</strong> Follow us on <a href="https://www.instagram.com/beam_berkeley/">Instagram</a> to receive information about our Fall 2025 infosession/application.
-    </p>
+    </p> -->
 
     <!-- ### These three lines are for DURING application season ### -->
     <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2025 <a target=_blank href="https://forms.gle/xrxT25R8WzEtohNF7">Application</a>
@@ -25,10 +25,9 @@ description:
     </h2> -->
 
     <!-- ### Next 4 lines are for AFTER Application season ### -->
-   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>
-    <p><strong>Spring 2025 applications are now closed</strong> but feel free to add
-      your email below or follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2025 infosession/application.</p> -->
+   <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+    <p><strong>Fall 2025 applications are now closed</strong> but feel free to follow us on <a target=_blank
+        href="https://www.instagram.com/beam_berkeley">Instagram</a> to receive information about our Spring 2026 infosession/application.</p>
  
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
