--- a/about.html
+++ b/about.html
@@ -294,39 +294,22 @@ description:
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
             var data = [
-                ['Adithya Sagar', 'CS 2025', 'Head of Outreach', 'sadithya'],
                 ['Alice Peng','MCB 2025', 'Curriculum | Site Leading','Alice'],
                 ['Annika Nam','Public Health + MCB 2026', 'Site Leading | Mentor Development','Annika'],
                 ['Apollo Loh', 'EECS + Philosophy 2026', 'Head of Logistics', 'apollo'],
-                ['Ashley Kaya', 'Microbial Biology 2025', 'Exec Head of External Affairs', 'ashley'],
                 ['Bradley Louie', '2026', 'Logistics | Mentor Development', 'white'],
-                ['Brandon Su', 'Applied Math + CS 2026', 'External Affairs | Mentor Development', 'Brandon'],
-                ['Carina Kim', 'Architecture + Linguistics 2025', 'President', 'carina'],
-                ['Cassandra Davis', '2025', 'Head of Mentor Development', 'cassie'],
-                ['Destiny Ogu', 'MCB + Data Science 2025', 'Site Leading | Logistics', 'destiny'],
-                ['Ekansh Agrawal', 'MCB 2025', 'Head of Mentor Development', 'ekansh'],
+                ['Brandon Su', 'Applied Math + CS 2026', 'Head of Mentor Development', 'Brandon'],
                 ['Ella Kasamis', 'BioE 2026', 'Logistics | Site Leading', 'ella'],
-                ['Emily Tu', 'DS + Public Health 2025', 'External Affairs | Outreach', 'Emily'],
-                ['Emily Yepez', '2025', 'President', 'emilyyy'],
-                ['Evelyn Batchelor', 'MCB + Public Health 2025', 'Site Leading | Outreach', 'Evelyn'],
                 ['Grace Xie', 'MCB + Data Science 2026', 'Head of Curriculum', 'grace'],
-                ['Hannah Cho', 'Legal Studies 2025', 'External Affairs | Site Leading', 'hannah'],
-                ['James Ghirardo', 'MechE 2026', 'Site Leading | Mentor Development', 'James'],
-                ['Kaitlyn Park', 'DS 2025', 'External Affairs | Outreach', 'KaitlynP'],
-                ['Kayla Lowenberg', 'MechE 2026', 'Site Leading | Logistics', 'kayla'],
-                ['Lucas Parker', 'IB 2027', 'Logistics | Outreach', 'Lucas'],
-                ['Makenna Leung', 'Anthropology 2025', 'Head of Site Leading', 'makenna'],
-                ['Marine Lyden', 'MCB 2025', 'Head of Site Leading', 'Marine'],
+                ['James Ghirardo', 'MechE 2026', 'Head of Site Leading', 'James'],
+                ['Kayla Lowenberg', 'MechE 2026', 'Co-President', 'kayla'],
+                ['Lucas Parker', 'IB 2027', 'Co-President', 'Lucas'],
                 ['Meisen Wang', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'meisen'],
                 ['Michelle Jeong', 'Material Science Engineering 2026', 'Site Leading | Outreach', 'michelle'],
                 ['Mira Chatrathi', 'Data Science 2026', 'Site Leading | Mentor Development', 'mira'],
                 ['Natalie Hoang', 'IEOR 2026', 'Head of Logistics', 'natalie'],
-                ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'pattyice'],
-                ['Rebecca Bernstein', '2025', 'Curriculum | Site Leading', 'rebecca'],
-                ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'safaa'],
-                ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'Curriculum | Site Leading', 'shlok'],
-                ['Shu-Han Lim', 'CivilEng 2027', 'Site Leading | Outreach', 'Shuhan'],
-                ['Valeria Pasillas', 'Political Science 2026', 'External Affairs | Mentor Development', 'Valeria'],
+                ['Shu-Han Lim', 'CivilEng 2027', 'Head of Outreach', 'Shuhan'],
+                ['Valeria Pasillas', 'Political Science 2026', 'Head of Site Leading', 'Valeria'],
                 ['Zachary Liu', 'MechE 2025', 'External Affairs | Logistics', 'zachary']
             ];
             //Categories to sort by. In this case, sort by year.
@@ -354,7 +337,7 @@ description:
                         //Committees
                         htmlExpr += '<h4>' + data[i][2] + '</h4></div>';
                         //Display image
-                        htmlExpr += '<img src=../images/2023_2024staff/' + data[i][3] + '.jpg id=staff-pic></div>';
+                        htmlExpr += '<img src=../images/2025_2026staff/' + data[i][3] + '.jpg id=staff-pic></div>';
                     }
                 }
             }
