added all images, nonadjusted

--- a/about.html
+++ b/about.html
@@ -293,11 +293,11 @@ description:
             //List of all staff members.
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
-            var data = [
+            var data = [ // ADJUST IMAGES TO 905 X 905
                 ['Alice Peng','MCB Immunology 2025', 'Curriculum | Site Leading','Alice'],
                 ['Alisanne Choi', 'Applied Math 2028', 'Site Leading | External Affairs', 'Alisanne'],
                 ['Annika Nam','Public Health + MCB 2026', 'Site Leading | Mentor Development','Annika'],
-                ['Apollo Loh', 'EECS + Philosophy 2026', 'Head of Logistics', 'apollo'],
+                ['Apollo Loh', 'EECS + Philosophy 2026', 'Head of Logistics', 'Apollo'],
                 ['Araina Vohra', 'Applied Math 2027', 'Logistics | Mentor Development', 'Araina'],
                 ['August Drake', 'Mechanical Engineering 2028', 'Logistics | Site Leading', 'August'],
                 ['Bradley Louie', '2026', 'Logistics | Mentor Development', 'white'],
@@ -318,10 +318,10 @@ description:
                 ['Lilly Kawabata', 'Chemical Biology 2028', 'Site Leading | Outreach', 'Lilly'],
                 ['Lucas Parker', 'Integrative Biology 2027', 'Co-President', 'Lucas'],
                 ['Marina Halbert', 'Neuroscience 2028', 'Site Leading | Outreach', 'Marina'],
-                ['Meisen Wang', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'meisen'],
+                ['Meisen Wang', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'Meisen'],
                 ['Michelle Jeong', 'Material Science Engineering 2026', 'Site Leading | Outreach', 'michelle'],
                 ['Mira Chatrathi', 'Data Science 2026', 'Site Leading | Mentor Development', 'mira'],
-                ['Natalie Hoang', 'IEOR + DS 2026', 'Head of Logistics', 'natalie'],
+                ['Natalie Hoang', 'IEOR + DS 2026', 'Head of Logistics', 'Natalie'],
                 ['Nathan Leung', 'Business Administration + Data Science 2028', 'Site Leading | External Affairs', 'Nathan'],
                 ['Nolan Mierzwa', 'Civil Engineering 2028', 'Logistics | Mentor Development', 'Nolan'],
                 ['Pranati Prashanth', 'MCB + Cognitive Science 2028', 'Curriculum | Site Leading', 'Pranati'],
@@ -329,7 +329,7 @@ description:
                 ['Ryan Raphael', 'Chemical Biology 2028', 'Logistics | External Affairs', 'Ryan'],
                 ['Saide Curiel', 'Public Health 2026', 'Site Leading | External Affairs', 'Saide'],
                 ['Shreyas Thumathy', 'Stats + Math 2028', 'External Affairs | Outreach', 'Shreyas'],
-                ['Shu-Han Lim', 'Civil Engineering 2027', 'Head of Outreach', 'Shuhan'],
+                ['Shu-Han Lim', 'Civil Engineering 2027', 'Head of Outreach', 'Shu-Han'],
                 ['Valentin Tello', 'Dragon slaying 2009', '', 'Valentin'],
                 ['Valeria Pasillas', 'Political Science + Minor in Education and Public Policy 2026', 'Head of Site Leading', 'Valeria'],
                 ['Yadany Alavez', 'Integrative Biology 2026', 'Site Leading | External Affairs', 'Yadany'],
@@ -339,11 +339,11 @@ description:
             //Categories to sort by. In this case, sort by year.
             var sortCategories = [
                 "President",
-                "Exec",
-                "2023",
-                "2024",
+                "Head", // exec
                 "2025",
-                "2026"
+                "2026",
+                "2027",
+                "2028"
             ];
             var htmlExpr = '<div class=\"container-row\">';
 
