finished staff pics

--- a/about.html
+++ b/about.html
@@ -293,7 +293,7 @@ description:
             //List of all staff members.
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
-            var data = [ // ADJUST IMAGES TO 905 X 905
+            var data = [ // CONVERT IMAGES TO JPG AND CORRECT EXEC NAMES
                 ['Alice Peng','MCB Immunology 2025', 'Curriculum | Site Leading','Alice'],
                 ['Alisanne Choi', 'Applied Math 2028', 'Site Leading | External Affairs', 'Alisanne'],
                 ['Annika Nam','Public Health + MCB 2026', 'Site Leading | Mentor Development','Annika'],
@@ -302,14 +302,14 @@ description:
                 ['August Drake', 'Mechanical Engineering 2028', 'Logistics | Site Leading', 'August'],
                 ['Bradley Louie', '2026', 'Logistics | Mentor Development', 'white'],
                 ['Brandon Su', 'Applied Math + CS 2026', 'Head of Mentor Development', 'Brandon'],
-                ['Brittney Chan', 'Data Science 2026', 'Outreach', 'Brittney'],
+                ['Brittney Chan', 'Data Science 2026', 'Head of Outreach', 'Brittney'],
                 ['Chloe Silagan', 'MCB 2026', 'Site Leading | Outreach', 'Chloe'],
                 ['Derek Fong', 'Mechanical Engineering 2026', 'Curriculum | Outreach', 'Derek'],
                 ['Ella Kasamis', 'BioE 2026', 'Logistics | Site Leading', 'ella'],
-                ['Emily Luo', 'Applied Math 2028', 'Logistics | Mentor Development', 'Emily'],
-                ['Grace Kim', 'MCB + Microbial Biology 2026', 'Curriculum', 'Grace_K'],
+                ['Emily Luo', 'Applied Math 2028', 'Logistics | Mentor Development', 'white'],
+                ['Grace Kim', 'MCB + Microbial Biology 2026', 'Head of Curriculum', 'Grace_K'],
                 ['Grace Xie', 'MCB + Data Science 2026', 'Head of Curriculum', 'Grace_X'],
-                ['Ittai Nelken-Regev', 'Applied Math 2027', 'External Affairs | Outreach', 'Ittai'],
+                ['Ittai Nelken-Regev', 'Applied Math 2027', 'Head of External Affairs', 'Ittai'],
                 ['James Ghirardo', 'Mechanical Engineering 2026', 'Head of Site Leading', 'James'],
                 ['Jared Haertel', 'Engineering Math and Statistics 2027', 'Curriculum | Logistics', 'Jared'],
                 ['Jayson Abarca', 'Public Health 2026', 'Site Leading | Outreach', 'Jayson'],
@@ -324,15 +324,15 @@ description:
                 ['Natalie Hoang', 'IEOR + DS 2026', 'Head of Logistics', 'Natalie'],
                 ['Nathan Leung', 'Business Administration + Data Science 2028', 'Site Leading | External Affairs', 'Nathan'],
                 ['Nolan Mierzwa', 'Civil Engineering 2028', 'Logistics | Mentor Development', 'Nolan'],
-                ['Pranati Prashanth', 'MCB + Cognitive Science 2028', 'Curriculum | Site Leading', 'Pranati'],
+                ['Pranati Prashanth', 'MCB + Cognitive Science 2028', 'Curriculum | Site Leading', 'white'],
                 ['Roselyn Maldonado', 'MCB with Neurobiology Emphasis 2026', 'Curriculum | Site Leading', 'Roselyn'],
                 ['Ryan Raphael', 'Chemical Biology 2028', 'Logistics | External Affairs', 'Ryan'],
                 ['Saide Curiel', 'Public Health 2026', 'Site Leading | External Affairs', 'Saide'],
                 ['Shreyas Thumathy', 'Stats + Math 2028', 'External Affairs | Outreach', 'Shreyas'],
                 ['Shu-Han Lim', 'Civil Engineering 2027', 'Head of Outreach', 'Shu-Han'],
-                ['Valentin Tello', 'Dragon slaying 2009', '', 'Valentin'],
+                ['Valentin Tello', '2028', 'Site Leading | Mentor Development', 'Valentin'],
                 ['Valeria Pasillas', 'Political Science + Minor in Education and Public Policy 2026', 'Head of Site Leading', 'Valeria'],
-                ['Yadany Alavez', 'Integrative Biology 2026', 'Site Leading | External Affairs', 'Yadany'],
+                ['Yadany Alavez', 'Integrative Biology 2026', 'Head of External Affairs', 'Yadany'],
                 ['Zachary Liu', 'MechE 2025', 'External Affairs | Logistics', 'zachary'],
                 ['Zoe LoCicero', 'Molecular and Cell Biology 2027', 'Curriculum | Site Leading', 'Zoe']
             ];
