updated decal times for sp26

--- a/join.html
+++ b/join.html
@@ -173,7 +173,7 @@ description:
   <div style="width:75%; display:inline-block;">
     <p style="text-align: left; "> <b>What is the weekly time commitment? </b></p>
     <p style="text-align: left;">
-      We have mandatory DeCal (worth 1 or 2 units) on Monday evenings from 5:30-7pm, where we primarily go over the
+      We have mandatory DeCal (worth 1 or 2 units) on Monday evenings from 6:30-8pm in VLSB, where we primarily go over the
       lesson for the week. You will then attend site for 1 hour (not including transportation time) on one afternoon
       between Tuesday and Friday every week! You are at the same site for the whole semester. Our Outreach committee
       also plans out volunteer events and socials that you can attend on weekends!
